<resources>
    <string name="app_name">SMIS</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">School Name</string>
    <string name="nav_header_subtitle">school@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="action_profile">Profile</string>
    <string name="action_fees">Fees</string>
    <string name="action_results">Results</string>
    <string name="action_calender">Calender</string>
    <string name="action_signout">Sign-Out</string>
    <string name="action_assignment">Assignment</string>
    <string name="action_message">Messages</string>
    <string name="title_activity_profile">Profile</string>
</resources>