<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_set_profile"
            android:icon="@drawable/emoji"
            android:title="@string/action_profile" />

        <item
            android:id="@+id/nav_fees"
            android:icon="@drawable/fees"
            android:title="@string/action_fees" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@drawable/calender"
            android:title="@string/action_calender" />

        <item
            android:id="@+id/nav_assignment"
            android:icon="@drawable/assignment"
            android:title="@string/action_assignment" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/message"
            android:title="@string/action_message" />

        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/signout"
            android:title="@string/action_signout" />
    </group>


</menu>